--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,12 @@ dev_dependencies:
   build_runner: ^2.3.2
   mobx_codegen: ^2.0.7+3
   flutter_lints: ^2.0.0
+  flutter_launcher_icons: ^0.11.0
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
 
 flutter:
   uses-material-design: true
