--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.areacode.simplepomodoro.webapp_simple_pomodoro">
    <application
-        android:label="webapp_simple_pomodoro"
+        android:label="Pomodoro"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
         <activity
